--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -1,9 +1,15 @@
-
+@import 'general';
 #sidebar {
-	background-color: #252525;
+	background-color: blue;
 	left: 0;
 	position: fixed;
 	top:0;
 	width: 180px;
 
+	#logo {
+		font-family: arial;
+		.blue {
+			color: $blue_logo;
+		}
+	}
 }
