Commit de merge

--- a/src/PlanIt/UserBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout.html.twig
@@ -2,11 +2,9 @@
 
 {% block stylesheets %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% stylesheets filter='compass' 
-        "@PlanItUserBundle/Resources/public/css/sidebar.scss" 
-    %}
-        <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
-    {% endstylesheets %}
+    {% stylesheets '@PlanItUserBundle/Resources/assets/sass/sidebar.scss' filter="sass" %}
+	      <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
+	{% endstylesheets %}
 {% endblock %}
 
  
