asset c'est nul, ça va dans public

--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -15,4 +15,17 @@
 
 
 /*COLORS*/
-$blue_logo : #61c0a5;
+$menu: #252525;
+$menu_module: #2e2d2d;
+$blue_logo: #61c0a5;
+
+$positive: #a5cd7d;
+$negative: #e56454;
+$neutral: #dfdede;
+
+$invit_module: #1d89cf;
+$budget_module: #f9de2f;
+$place_module: #857198;
+$todo_module: #dc4888;
+$transport_module : #ff9f37;
+$add_module : #f1f1f1;
