--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,8 +18,8 @@
                 <div id="logo">PLAN <span class="blue">IT</span></div>
                 <div id="search">
                     <form>
-                      <input name="search" type="search">
-                      <input type="submit" value="Find">
+                      <input name="search" type="search" class="search" placeholder="Rechercher">
+                      <input type="submit" value="Find" class="go">
                     </form>
                 </div>
                 <div class="user">
@@ -28,7 +28,7 @@
                     <span class="counter-event">3 événements cours {# {{ name }} #}</span>
                 </div>
                 {% block navigation %}
-                    <ul>
+                    <ul id="menu">
                         <li>Evénements</li>
                         <ul>
                             <li>Anniversaire Florent</li>
