--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -1,15 +1,67 @@
 @import 'general';
 #sidebar {
-	background-color: blue;
+	background-color: $menu;
+	bottom : 0;
 	left: 0;
 	position: fixed;
 	top:0;
 	width: 180px;
 
 	#logo {
-		font-family: arial;
+		box-shadow: -3px 10px 12px #000;
+		color: #FFF;
+		font: 23px arial;
+		height: 60px;
+		line-height: 64px;
+		text-align: center;
+		@include box-shadow(0px,4px,2px,-2px,#000);
 		.blue {
 			color: $blue_logo;
+		}
+	}
+
+	#search {
+		margin-top: 3px;
+		input.search {
+			background-color: $menu;
+			border: none;
+		}
+		input.go {
+			@extend input.search;
+			color: #FFF;
+		}
+	}
+
+	.user {
+		padding: 15px;
+		img {
+			float: left;
+			height: 41px;
+			margin-right: 14px;
+			@include border-radius(20px);
+			width: 41px;
+		}
+		.name {
+			display: block;
+			font: 12px arial;
+			color : #e4e4e4;
+			margin-top:5px; 
+		}
+		.counter-event {
+			font: 9px arial;
+			color : #aeaeae;
+		}
+	}
+
+	#menu,
+	#menu ul {
+		padding: 0;
+		li {
+			@include box-shadow(0px,4px,2px,-2px,#000);
+			color: #dddddd;
+			list-style: none;
+			padding: 9px 0 9px 40px;
+			font: 11px arial;
 		}
 	}
 }
