--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -15,6 +15,8 @@
 
 
 /*COLORS*/
+$header: #f1f1f1;
+
 $menu: #252525;
 $menu_module: #2e2d2d;
 $blue_logo: #61c0a5;
@@ -44,3 +46,10 @@ $add_module : #f1f1f1;
       -ms-box-shadow: $vertical $horizontal $scale $blur $color;
           box-shadow: $vertical $horizontal $scale $blur $color;
 }
+
+/*GENERAL*/
+body {
+  margin: 0;
+  padding: 0;
+}
+
