--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -14,7 +14,7 @@
 		height: 60px;
 		line-height: 64px;
 		text-align: center;
-		@include box-shadow(0px,4px,2px,-2px,#000);
+		@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
 		.blue {
 			color: $blue_logo;
 		}
@@ -33,7 +33,8 @@
 	}
 
 	.user {
-		padding: 15px;
+		padding: 15px 15px 20px 15px;
+		@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
 		img {
 			float: left;
 			height: 41px;
@@ -55,13 +56,34 @@
 
 	#menu,
 	#menu ul {
+		margin: 0;
 		padding: 0;
 		li {
-			@include box-shadow(0px,4px,2px,-2px,#000);
+			@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
 			color: #dddddd;
 			list-style: none;
 			padding: 9px 0 9px 40px;
 			font: 11px arial;
+			a {
+				color: #dddddd;
+				font: 11px arial;
+				text-decoration: none;
+				&:active,
+				&:hover {
+					color: $blue_logo;
+				}
+			}
+			&.last {
+				@include box-shadow(0,0,0,0,#1c1c1c);
+			}
 		}
 	}
+	ul.modules li {
+		background-color: $menu_module;
+		border: solid 1px $menu;
+	}
+	ul.events li.active {
+		border-left: solid 8px $blue_logo;
+	}
+
 }
