--- a/src/PlanIt/UserBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout.html.twig
@@ -2,7 +2,9 @@
 
 {% block stylesheets %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% stylesheets '@PlanItUserBundle/Resources/public/css/general.scss' filter="sass" %}
+    {% stylesheets 
+    '@PlanItUserBundle/Resources/public/css/*.scss' 
+    filter="compass" %}
 	      <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
 	{% endstylesheets %}
 {% endblock %}
