ajout de bootstrap + fonts

--- a/src/PlanIt/UserBundle/Resources/public/css/header.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/header.scss
@@ -16,7 +16,7 @@ header {
 		}
 		.name {
 			line-height: 30px;
-			font: 10px arial;
+			font: 14px 'PT Sans';
 			color: #535252;
 			vertical-align: text-bottom;
 		}
