--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'PlanItUserBundle::layout.html.twig' %}
 
 {% block content %}
-    Ceci est un test
+	<div class="container">
+	    <div class="row">
+	    	<div class="col-md-4"> une colonne 1</div>
+	    	<div class="col-md-4"> une colonne 2</div>
+	    	<div class="col-md-4"> une colonne 3</div>
+	    </div>
+    </div>
 {% endblock %}
