--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -1,17 +1,23 @@
+@import 'path';
 /*FONTS*/
 /*@font-face {
     font-family: 'gotham_htfmedium';
-    src: url('../fonts/gothamhtf-medium-webfont.eot');
-    src: url('../fonts/gothamhtf-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/gothamhtf-medium-webfont.woff2') format('woff2'),
-         url('../fonts/gothamhtf-medium-webfont.woff') format('woff'),
-         url('../fonts/gothamhtf-medium-webfont.ttf') format('truetype'),
-         url('../fonts/gothamhtf-medium-webfont.svg#gotham_htfmedium') format('svg');
+    src: url($root_path+'/fonts/gothamhtf-medium-webfont.eot');
+    src: url($root_path+'/fonts/gothamhtf-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url($root_path+'/fonts/gothamhtf-medium-webfont.woff2') format('woff2'),
+         url($root_path+'/fonts/gothamhtf-medium-webfont.woff') format('woff'),
+         url($root_path+'/fonts/gothamhtf-medium-webfont.ttf') format('truetype'),
+         url($root_path+'/fonts/gotham.otf') format('opentype'),
+         url($root_path+'/fonts/gothamhtf-medium-webfont.svg#gotham_htfmedium') format('svg');
+
     font-weight: normal;
     font-style: normal;
 
 }*/
 
+@font-face {  font-family: "GothamHTF-Medium";  src: url($root_path+'/fonts/GothamHTF-Medium.otf') format("opentype"); }
+
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,300,100);
 
 
 /*COLORS*/
@@ -53,3 +59,6 @@ body {
   padding: 0;
 }
 
+.container {
+  margin-left: 180px;
+}
