--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -1,4 +1,6 @@
 @import 'general';
+
+
 #sidebar {
 	background-color: $menu;
 	bottom : 0;
@@ -10,13 +12,15 @@
 	#logo {
 		box-shadow: -3px 10px 12px #000;
 		color: #FFF;
-		font: 23px arial;
+		font: 23px 'GothamHTF-Medium';
 		height: 60px;
 		line-height: 64px;
 		text-align: center;
 		@include box-shadow(0px,4px,2px,-2px,#1c1c1c);
 		.blue {
 			color: $blue_logo;
+			font-family: 'Roboto';
+			font-weight: 100;
 		}
 	}
 
@@ -44,12 +48,12 @@
 		}
 		.name {
 			display: block;
-			font: 12px arial;
+			font: 14px 'PT Sans';
 			color : #e4e4e4;
 			margin-top:5px; 
 		}
 		.counter-event {
-			font: 9px arial;
+			font: 10px 'PT Sans';
 			color : #aeaeae;
 		}
 	}
@@ -63,10 +67,10 @@
 			color: #dddddd;
 			list-style: none;
 			padding: 9px 0 9px 40px;
-			font: 11px arial;
+			font: 14px 'PT Sans';
 			a {
 				color: #dddddd;
-				font: 11px arial;
+				font: 14px 'PT Sans';
 				text-decoration: none;
 				&:active,
 				&:hover {
