Passage de la page event du Bundle User au Bundle Event

--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PlanItUserBundle::layout.html.twig' %}
+{% extends 'PlanItEventBundle::layout.html.twig' %}
 
 {% block content %}
 	<div class="container">
@@ -8,7 +8,7 @@
 	    <div class="row">
 	    	<div class="col-md-3" id="descr_event" style="border:1px solid red;">
                     <img src="/images/event/photo_evenement.jpg" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exffff ea commodo consequat. </p>
 	    	</div>
 	    	<div class="col-md-4 col-lg-offset-1" style="border:1px solid red;"> 
 				<div id="pie_chart" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
