--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -7,7 +7,7 @@
 		</div>
 	    <div class="row">
 	    	<div class="col-md-3" id="descr_event" style="border:1px solid red;">
-                    <img src="/images/event/photo_evenement.jpg" />
+                    <img src="{{ asset(['images/', "event/photo_evenement.jpg"]|join) }}" />
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exffff ea commodo consequat. </p>
 	    	</div>
 	    	<div class="col-md-4 col-lg-offset-1" style="border:1px solid red;"> 
