--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -34,7 +34,7 @@
 			width: 82%;
 		}
 		input.go {
-			background: $menu url($root_path+'/images/picto-menu.png');
+			background: $menu url('/images/picto-menu.png');
 			border: none;
 			text-indent: 999px;
 			width: 10%;
@@ -91,25 +91,35 @@
 		background-color: $menu_module;
 		border: solid 1px $menu;
 	}
-	ul.events > li {
-		background: url($root_path+'/images/picto-menu.png') no-repeat 98% -139px;
-		&:hover,
-		&.active {
-			border-left: solid 8px $blue_logo;
-			padding-left: 32px !important;
-		}	
-		&.active {
-			background: url($root_path+'/images/picto-menu.png') no-repeat 98% -115px;
-
+	ul.events { 
+		li.event {
+			// background: url('/images/picto-menu.png') no-repeat 98% -139px;
+			background: $menu !important;
+			border: 0;
+			@include border-radius(0); 
+			&:hover,
+			&.ui-state-active {
+				border-left: solid 8px $blue_logo;
+				padding-left: 32px !important;
+			}	
+			// &.active {
+			// 	background: url('/images/picto-menu.png') no-repeat 98% -115px;
+			// }
+			span.ui-icon {
+				left: 86%;
+			}
 		}
-		
+	}
+	ul.modules {
+		border: none;
+		@include border-radius(0); 
 	}
 
 	
 	ul li.events,
 	ul li.account,
 	ul li.help {
-		background: url($root_path+'/images/picto-menu.png') no-repeat;	
+		background: url('/images/picto-menu.png') no-repeat;	
 	}
 
 	ul li.events {
