--- a/src/PlanIt/UserBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout.html.twig
@@ -10,8 +10,8 @@
 {% endblock %}
 
  {% block javascripts %}
-    {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% javascripts '@PlanItUserBundle/Resources/public/js/*.js'  %}
+    {{ parent() }} <!-- pour ne pas effacer les autres js -->
+    {% javascripts '@PlanItUserBundle/Resources/public/js/main.js'  %}
 	      <script type="text/javascript" src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 {% endblock %}
