--- a/src/PlanIt/UserBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
  {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
     {% javascripts '@PlanItUserBundle/Resources/public/js/*.js'
-                    '%kernel.root_dir%/Resources/js/main.js'  %}
+                    '%kernel.root_dir%/Resources/js/*.js'  %}
 	      <script type="text/javascript" src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 {% endblock %}
