modif de l'accordeon + déplacement de l'appel

--- a/app/Resources/views/templates/sidebar.html.twig
+++ b/app/Resources/views/templates/sidebar.html.twig
@@ -1,5 +1,6 @@
 
 {% twig_js name="sidebar" %}
+<script>accordeon();</script>
 <div id="logo">PLAN <span class="blue">IT</span></div>
 <div id="search">
     <form>
@@ -16,19 +17,19 @@
     <ul id="menu">
         <li class="events">Evénements</li>
         <ul class="events" id="accordion">
-            <li class="active event">Anniversaire Flor...</li>
+            <li class="active event"></span>Anniversaire Flor...</li>
             <ul class="modules">
                 <li><a href="#">Général</a></li>
                 <li><a href="#">Gestion des invités</a></li>
                 <li><a href="#">Gestion du budget</a></li>
             </ul>
-            <li class="event">Mariage Aurélie</li>
+            <li class="event"></span>Mariage Aurélie</li>
             <ul class="modules">
                 <li><a href="#">Général</a></li>
                 <li><a href="#">Gestion des invités</a></li>
                 <li><a href="#">Gestion du budget</a></li>
             </ul>
-            <li class="event">Anniversaire papa</li>
+            <li class="event"></span>Anniversaire papa</li>
             <ul class="modules">
                 <li><a href="#">Général</a></li>
                 <li><a href="#">Gestion des invités</a></li>
