--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body onload="getUser({{id}});accordeon();">
+    <body onload="getUser({{id}});">
         {% block body %} 
             {% block header %}
                 <header>
@@ -49,6 +49,11 @@
             <script src="//code.highcharts.com/modules/exporting.js"></script>
           
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+            {% javascripts
+                '%kernel.root_dir%/Resources/js/*.js'
+            %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
         {% endblock %}
     </body>
 </html>
