--- a/app/Resources/views/templates/sidebar.html.twig
+++ b/app/Resources/views/templates/sidebar.html.twig
@@ -11,7 +11,7 @@
 <div class="user">
     <img  src="/images/{{ user.image }}"/>
     <span class="name">{{user.name}} {{ user.surname }}</span> 
-    <span class="counter-event">3 événements cours {# {{ name }} #}</span>
+    <span class="counter-event">{{ user.events|length }} événements cours</span>
 </div>
 {% block navigation %}
     <ul id="menu">
@@ -20,7 +20,7 @@
             {% for event in user.events %}
                 <li class="active event">{{event.name}}</li>
                 <ul class="modules">
-                    <li><a href="#">Général</a></li>
+                    <li><a href="/app_dev.php/event/{{event.id}}">Général</a></li>
                     <li><a href="#">Gestion des invités</a></li>
                     <li><a href="#">Gestion du budget</a></li>
                 </ul>
