--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -1,80 +1,7 @@
 {% extends 'PlanItEventBundle::layout.html.twig' %}
 
 {% block content %}
-	<div class="container">
-		<div class="row" id="title_event">
-			<div class="col-md-12" > ANNIVERSAIRE FLORENT </div>
-		</div>
-
-		<div class="row" id="separator">
-			<div class="col-md-12"> </div>
-		</div>
-
-	    <div class="row">
-	    	<div class="col-md-3 descr_event">
-	    			<img src="{{ asset(['images/', "event/photo_evenement.jpg"]|join) }}" /> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
-	    	</div>
-	    	<div class="col-md-5"> 
-				<div id="pie_chart"></div>
-	    	</div>
-	    	<div class="col-md-4"> 
-	    		<div class="info_dte">
-		    		<img src="{{ asset(['images/', "event/info_dte_zzz.png"]|join) }}" /> 
-		    		<p> NOMBRE DE DODOS </br> <span>5</span> </p>
-	    		</div>
-	    		<div class="info_dte">
-		    		<img src="{{ asset(['images/', "event/info_dte_invite.png"]|join) }}" /> 
-		    		<p> NOMBRE D'INSCRITS </br> <span>18</span> </p>
-	    		</div>
-	    		<div class="info_dte info_color">
-		    		<img src="{{ asset(['images/', "event/info_dte_budget.png"]|join) }}" /> 
-		    		<p> BUDGET TOTAL </br> <span>36</span> </p>
-	    		</div>
-	    	</div>
-	    </div>
-
-	    <div class="row" id="mes_modules">
-			<div class="col-md-12">Mes modules</div>
-		</div>
-
-		<div class="row">
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module" >
-				<div id="module_invite">
-					<img src="{{ asset(['images/', "event/pictos_modules/picto_invite.png"]|join) }}" /> 	
-					<p>Gestion des invités</p>    	
-				</div>	
-	    	</div>
-	    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-	    		<div id="module_budget">	
-					<img src="{{ asset(['images/', "event/pictos_modules/picto_budget.png"]|join) }}" /> 
-		    		<p>Gestion du budget</p>
-	    		</div>      		
-	    	</div>
-	    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-	    		<div id="module_lieu">
-					<img src="{{ asset(['images/', "event/pictos_modules/picto_lieu.png"]|join) }}" /> 	 
-		    		<p>Gestion du lieu</p>  
-		    	</div>   		
-	    	</div>
-	    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">	
-	    		<div id="module_todo">
-					<img src="{{ asset(['images/', "event/pictos_modules/picto_todo.png"]|join) }}" /> 
-		    		<p>Todo list</p> 
-		    	</div>     		
-	    	</div>
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">
-				<div id="module_transport">
-					<img src="{{ asset(['images/', "event/pictos_modules/picto_transport.png"]|join) }}" /> 	
-					<p>Gestion du transport</p> 
-				</div>   		
-	    	</div>
-	    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 module">	
-	    		<div id="ajout_module"> 
-		    		<p>+</p> 
-	    		</div>     		
-	    	</div>
-		</div>
-
+	<div id="content_general_event" class="container">
+		<!-- Content template -->
     </div>
 {% endblock %}
