--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="container">
 		<div class="row" id="title_event">
-			<div class="col-md-12" > ANNIVERSAIRE FLORENT </div>
+			<div class="col-md-12" > <h1>ANNIVERSAIRE FLORENT</h1> </div>
 		</div>
 
 		<div class="row" id="separator">
@@ -29,7 +29,7 @@
 	    		</div>
 	    		<div class="info_dte info_color">
 		    		<img src="{{ asset(['images/', "event/info_dte_budget.png"]|join) }}" /> 
-		    		<p> BUDGET TOTAL </br> <span>36</span> </p>
+		    		<p> BALANCE </br> <span>36€</span> </p>
 	    		</div>
 	    	</div>
 	    </div>
