--- a/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/sidebar.scss
@@ -1,6 +1,5 @@
 @import 'general';
 
-
 #sidebar {
 	background-color: $menu;
 	bottom : 0;
@@ -10,7 +9,7 @@
 	width: 180px;
 
 	#logo {
-		box-shadow: -3px 10px 12px #000;
+		//box-shadow: -3px 10px 12px #000;
 		color: #FFF;
 		font: 23px 'GothamHTF-Medium';
 		height: 60px;
