--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -1,18 +1,4 @@
 /*FONTS*/
-/*@font-face {
-    font-family: 'gotham_htfmedium';
-    src: url($root_path+'/fonts/gothamhtf-medium-webfont.eot');
-    src: url($root_path+'/fonts/gothamhtf-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url($root_path+'/fonts/gothamhtf-medium-webfont.woff2') format('woff2'),
-         url($root_path+'/fonts/gothamhtf-medium-webfont.woff') format('woff'),
-         url($root_path+'/fonts/gothamhtf-medium-webfont.ttf') format('truetype'),
-         url($root_path+'/fonts/gotham.otf') format('opentype'),
-         url($root_path+'/fonts/gothamhtf-medium-webfont.svg#gotham_htfmedium') format('svg');
-
-    font-weight: normal;
-    font-style: normal;
-
-}*/
 
 @font-face {  font-family: "GothamHTF-Medium";  src: url('/fonts/GothamHTF-Medium.otf') format("opentype"); }
 
@@ -26,16 +12,11 @@ $menu: #252525;
 $menu_module: #2e2d2d;
 $blue_logo: #61c0a5;
 
-$positive: #a5cd7d;
-$negative: #e56454;
-$neutral: #dfdede;
 
-$invit_module: #1d89cf;
-$budget_module: #f9de2f;
-$place_module: #857198;
-$todo_module: #dc4888;
-$transport_module : #ff9f37;
-$add_module : #f1f1f1;
+$head_event: #f1f1f1;
+$text_listing: #444343;
+$add_event : #f1f1f1;
+
 
 /*MIXIN*/
 @mixin border-radius($radius) {
