Variable qui bugait

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body onload="getUser({{user_id}});getEvent({{event_id}});">
+    <body onload="getUser({{user_id}});">
         {% block body %} 
             {% block header %}
                 <header>
