--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PlanItEventBundle::layout.html.twig' %}
+{% extends 'PlanItUserBundle::layout.html.twig' %}
 
 {% block content %}
 	<div class="container">
