--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -1,4 +1,12 @@
 {% extends 'PlanItUserBundle::layout.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
+    {% stylesheets 
+    '@PlanItUserBundle/Resources/public/css/*.scss' 
+    filter="compass" %}
+	      <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
+	{% endstylesheets %}
+{% endblock %}
 
 {% block content %}
 	<div class="container">
@@ -9,53 +17,13 @@
 		<div class="row" id="separator">
 			<div class="col-md-12"> </div>
 		</div>
-
-	    <div class="row listing-events">
-	    	<div class="col-md-3 ">
-	    		<div class="event-thumbnail">
-		    		<div class="head">
-		    			<h2>Anniversaire Florent</h2>
-		    			<span class="date">J-5</span>
-		    		</div>
-		    		<div class="content">
-			    		<img src="{{ asset(['images/', "event/photo_evenement.jpg"]|join) }}" /> 
-			    		<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae distinctio, cum voluptatum fuga labore temporibus aut eum voluptatem mollitia? ablablablablabla </p>
-		    		</div>
-	    		</div>
-	    	</div>
-
-	    	<div class="col-md-3 ">
-	    		<div class="event-thumbnail">
-		    		<div class="head">
-		    			<h2>Mariage Aurélie</h2>
-		    			<span class="date">J-20</span>
-		    		</div>
-		    		<div class="content">
-			    		<img src="{{ asset(['images/', "event/photo_evenement.jpg"]|join) }}" /> 
-			    		<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae distinctio, cum voluptatum fuga labore temporibus aut eum voluptatem mollitia?
-			    		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim accusantium expedita aperiam doloribus ad tenetur fugit ullam a officiis eaque, error placeat dolore nobis voluptatum. Numquam quos provident dolor amet. </p>
-		    		</div>
-		    	</div>
-	    	</div>
-
-	    	<div class="col-md-3 ">
-	    		<div class="event-thumbnail">
-		    		<div class="head">
-		    			<h2>Nouvel An</h2>
-		    			<span class="date">J-5</span>
-		    		</div>
-		    		<div class="content">
-			    		<img src="{{ asset(['images/', "event/photo_evenement.jpg"]|join) }}" /> 
-			    		<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae distinctio, cum voluptatum fuga labore temporibus aut eum voluptatem mollitia? </p>
-		    		</div>
-		    	</div>
-	    	</div>
-	    	
-	    	<div class="col-md-3 ">
-	    		<div class="add event-thumbnail">
-		    		<p> + </p>
-		    	</div>
-	    	</div>
-	    </div>
+		<div id="events" class="row listing-events">
+		<!-- Events template -->
+		</div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
+    <script> getEvents({{user_id}}); </script>
 {% endblock %}
