--- a/src/PlanIt/UserBundle/Resources/views/layout.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/layout.html.twig
@@ -1,17 +1,10 @@
 {% extends '::base.html.twig' %}
 
-{% block stylesheets %}
-    {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% stylesheets 
-    '@PlanItUserBundle/Resources/public/css/*.scss' 
-    filter="compass" %}
-	      <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
-	{% endstylesheets %}
-{% endblock %}
-
  {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-
+    {% javascripts '@PlanItUserBundle/Resources/views/templates/events.html.twig' filter="twig_js, ?yui_js" %}
+          <script language="javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
     {% javascripts '@PlanItUserBundle/Resources/public/js/*.js'
                     '@PlanItUserBundle/Resources/public/js/listing-scripts.js'
                     '%kernel.root_dir%/Resources/js/*.js'
