suppression de setMaxDivHeight() + organisation css
La fonction setMaxDivHeight() est toujours dans listing-scripts.js mais
je ne l’appelle plus -> à trouver comment gérer le js avec les template
Réorganisation du css. Le général.scss de UserBundle (avec les styles
généraux) n’est plus appelé dans les autres bundles, mais depuis
base.html.twig

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,11 @@
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
             <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+            {% stylesheets 
+            '@PlanItUserBundle/Resources/public/css/*.scss'
+            filter="compass" %}
+                  <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
+            {% endstylesheets %}
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
