--- a/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/templates/general/content.html.twig
@@ -1,6 +1,6 @@
 {% twig_js name="content" %}
-<div class="row" id="title_event">
-	<div class="col-md-12" > {{ evnt.name }} </div>
+<div class="row" id="title">
+	<div class="col-md-12" > <h1>{{ evnt.name }} </h1></div>
 </div>
 
 <div class="row" id="separator">
