--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -10,7 +10,7 @@
 
 {% block content %}
 	<div class="container">
-		<div class="row" id="title_event">
+		<div class="row" id="title">
 			<div class="col-md-12" > <h1>EVENEMENTS</h1> </div>
 		</div>
 
