--- a/src/PlanIt/UserBundle/Resources/public/css/listing.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/listing.scss
@@ -6,7 +6,7 @@
 
 .event-thumbnail {
 	border: solid 1px #dad7d7;
-	height: 100%;
+	height: 300px;
 
 	.head {
 		background-color: $head_event;
@@ -28,6 +28,12 @@
 
 	.content {
 		padding: 15px;
+		.image-cropper {
+		  	position: relative;
+			height: 150px;
+			overflow: hidden;
+			margin-bottom : 12px;
+		}
 		img {
 			margin-bottom :15px;
 			width:100%;
@@ -46,5 +52,6 @@
 		color: #777777;
 		text-align: center;
 		font-size: 70px;
+		line-height: 300px;
 	}
 }
