--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -1,5 +1,4 @@
 {% twig_js name="events" %}
-
 {% for event in user_events %}
 	<div class="col-md-3 ">
 		<div class="event-thumbnail">
@@ -8,8 +7,10 @@
 				<span class="date">J-5</span>
 			</div>
 			<div class="content">
+				<div class="image-cropper">
 	    		<img src="/images/event/events_pictures/{{event.image}}" /> 
-	    		<p class="description">{{event.description}}</p>
+	    		</div>
+	    		<p class="description">{{ event.description }}</p>
 			</div>
 		</div>
 	</div>
