--- a/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/templates/events.html.twig
@@ -1,6 +1,6 @@
 {% twig_js name="events" %}
 {% for event in user_events %}
-	<div class="col-md-3 ">
+	<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
 		<div class="event-thumbnail">
 			<div class="head">
 				<h2>{{event.name}}</h2>
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 {% endfor %}
-<div class="col-md-3 ">
+<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
 	<div class="add event-thumbnail">
 		<p> + </p>
 	</div>
