--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -60,3 +60,16 @@ body {
   border-bottom: 1px solid #dadada;
   margin-bottom: 40px;
 }
+
+button {
+    border: none;
+    color: #FFF;
+    @include border-radius(3px); 
+    font-size: 13px;
+  }
+
+.head-list {
+  height: 41px;
+  @include border-radius(3px); 
+  padding: 13px 27px;
+}
